--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="pic-box">
       <div class="slider">
         <div class="overlay">
-          <img id="slider-image" src="images/yandisa3.jpg" alt="Slider Image" />
+          <img id="slider-image" src="images/house1.jpg" alt="Slider Image" />
           <div class="overlay-text">
             <p>This is my image slideshow project</p>
           </div>
